<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:orientation="vertical"
    android:background="@drawable/dog_name_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/purchases_text_size"
            android:text="@string/purchases"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageView
            android:layout_gravity="center"
            android:padding="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_lightbulb_32"
            android:contentDescription="hints"
            tools:ignore="HardcodedText" />
        <TextView
            android:id="@+id/buy_hint_count"
            android:layout_marginEnd="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:textSize="@dimen/purchases_mini_text_size"
            android:text="00"
            tools:ignore="HardcodedText" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_buy1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_grey"
            android:textSize="24sp"
            android:text="@string/text1_buy_hint"/>
        <ImageView
            android:layout_gravity="center"
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_lightbulb_24"
            android:contentDescription="hints"
            tools:ignore="HardcodedText" />
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1_buy_price"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/purchases_mini_text_size"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_buy2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/purchases_mini_text_size"
            android:text="@string/text2_buy_hint"/>
        <ImageView
            android:layout_gravity="center"
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_lightbulb_24"
            android:contentDescription="hints"
            tools:ignore="HardcodedText" />
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2_buy_price"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/purchases_mini_text_size"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_buy3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/purchases_mini_text_size"
            android:text="@string/text3_buy_hint"/>
        <ImageView
            android:layout_gravity="center"
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_lightbulb_24"
            android:contentDescription="hints"
            tools:ignore="HardcodedText" />
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text3_buy_price"
            android:textColor="@color/light_grey"
            android:textSize="@dimen/purchases_mini_text_size"/>

    </LinearLayout>
    <TextView
        android:id="@+id/tv_close_buy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/pink_violet"
        android:textAlignment="textEnd"
        android:textSize="@dimen/purchases_text_size"
        android:text="@string/close"/>




</LinearLayout>